<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">GetJac\'d</string>
    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_example">Example action</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_sign_in">Sign In</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_setup_profile">User Profile</string>
    <string name="last_name">Last</string>
    <string name="first_name">First</string>
    <string name="gender">Gender</string>
    <string name="location">Location</string>
    <string name="age">Age</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="finish_profile">Save and Finish!</string>
    <string name="title_activity_create_group">Create Group</string>
    <string name="title_activity_group_profile">Group Profile</string>

    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>

</resources>
